# tiktok_solana_clone

./: Anchor.toml
programs/tiktok-solana/: Cargo.toml
programs/tiktok-solana/src/: lib.rs
tests/: tiktok-solana.ts
